tests/paczka1/small_fuzzy/54812384.err
Error in line 3: l4jVJSiVyO S353 42,4
Error in line 7: UNm8J A329 73,7
